<resources>
    <string name="app_name">American Football Scores</string>
    <string name="after_touchdown">Point After Touchdown</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field goal</string>
    <string name="safety">Safety</string>
    <string name="red_team">Red Team</string>
    <string name="blue_team">Blue Team</string>
    <string name="reset">Reset</string>
</resources>
