<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.android.footballscores.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/red_team"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/red_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="66sp" />

            <Button
                style="@style/buttonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="touchdownForRedTeam"
                android:text="@string/touchdown" />

            <Button
                style="@style/buttonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="pointAfterTouchdownForRedTeam"
                android:text="@string/after_touchdown" />

            <Button
                style="@style/buttonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="fieldGoalForRedTeam"
                android:text="@string/field_goal" />

            <Button
                style="@style/buttonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="safetyForRedTeam"
                android:text="@string/safety"

                />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/blue_team"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blue_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:paddingRight="40dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="66sp" />

            <Button
                style="@style/buttonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="touchdownForBlueTeam"
                android:text="@string/touchdown" />

            <Button
                style="@style/buttonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="pointAfterTouchdownForBlueTeam"
                android:text="@string/after_touchdown" />

            <Button
                style="@style/buttonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="fieldGoalForBlueTeam"
                android:text="@string/field_goal" />

            <Button
                style="@style/buttonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="safetyForBlueTeam"
                android:text="@string/safety" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>